# RustyJS-UI

./: .gitignore  AGENTS.md  Cargo.toml  README.md  jsconfig.json
docs/: PRD-enhancement.md  PRD-fetch.md  PRD.md  perf-baseline.json
examples/: flat_list.js  flex_form.js  hello_world_counter.js  modal.js  pokemon_fetch.js  select_input_echo.js  storage_bridge.js  tabs.js  task_form_flat_list.js  text_input_echo.js  toast.js
examples/login-app/app/: README.md  main.js
examples/login-app/app/components/: Badge.js  Button.js  Card.js  Field.js  List.js  Modal.js  index.js
examples/login-app/app/lib/: api.js  format.js  options.js
examples/login-app/app/screens/: auth-modal.js  (+6 more)
examples/login-app/rest-api/: README.md  package.json  tsconfig.json
examples/multi_file_save_button/: main.js  save_button.js
examples/router_demo/: main.js  screens.js
scripts/: run-example.ps1  run-example.sh  run-login-app.ps1  run-login-app.sh  run-perf.ps1  run-perf.sh
src/: bridge.rs  lib.rs  main.rs  modal.rs  perf.rs  style.rs  ui.rs  vdom.rs
src/runtime/: fetch.rs  mod.rs  modules.rs  scripts.rs  storage.rs  timer.rs
src/runtime/jsengine/: bootstrap.js  counter_app.js  mod.rs
tests/: fetch_transport.rs  hello_world_counter.js  js_bridge_dx_helpers.rs  js_bridge_fetch.rs  js_bridge_flat_list.rs  js_bridge_flex_form.rs  js_bridge_hello_world.rs  js_bridge_modal.rs  js_bridge_modules.rs  js_bridge_pokemon_fetch.rs  js_bridge_router.rs  js_bridge_select_input.rs  js_bridge_storage.rs  js_bridge_task_form_flat_list.rs  js_bridge_text_input.rs
types/: rustyjs-ui.d.ts
(+16 files in other folders)
